--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Beranda</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
     </head>
